Adjust top page blurb size and breaks
Signed-off-by: Rick Cogley <rick.cogley@esolia.co.jp>

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -5,7 +5,7 @@
     {{- partial "nav-home.html" . -}}
 {{ end }}
 {{ define "main" }}
-   <section class="hero is-medium hero-bg-totsukabridge">
+   <section class="hero is-small hero-bg-totsukabridge">
       <div class="hero-body">
         <div class="container">
           <div class="columns">
