--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="{{if .IsPage}}{{ range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}{{else}}{{ range $i, $e := .Site.Params.keywords }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}{{end}}">
     {{ if .Params.author }}<meta name="author" content="{{ .Params.author }}">{{ end }}
     <link href="http://gmpg.org/xfn/11" rel="profile">
-    <meta name="generator" content="Hugo {{ .Hugo.Version}} {{ .Hugo.CommitHash }} {{ replace .Hugo.BuildDate "+0900" "JST" }}" />
+    <meta name="generator" content="Hugo {{ hugo.Version}} {{ hugo.CommitHash }} {{ replace hugo.BuildDate "+0900" "JST" }}" />
     <link rel="canonical" href="{{ .Permalink }}">
 
     <script src="https://use.typekit.net/fwz4gtk.js"></script>
