--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -214,7 +214,7 @@
                 <p class="is-size-7-mobile">{{ i18n "topsectionpledgetext" | safeHTML | markdownify }}</p>
 
                 <figure class="image is-256x256">
-<img class="" data-caption="eSolia Logo" alt="Graphic of the eSolia Chicklet Logo" src="/img/eSolia-23nd-Lozenge-2022.png" >
+<img class="" data-caption="eSolia Anniversary Logo" alt="Graphic of the eSolia Anniversary Lozenge Logo" src="/img/eSolia-23nd-Lozenge-2022.png" >
 </figure>
 
               </div>
