--- a/layouts/shortcodes/listprojen.html
+++ b/layouts/shortcodes/listprojen.html
@@ -1,7 +1,10 @@
 <table class="table is-striped is-hoverable is-fullwidth is-bordered is-size-7-mobile is-size-7-tablet is-size-6-desktop">
   <tbody>
+
+  {{ $token := getenv "PRODBTOKEN15331" }}
+  {{ $bearertoken := printf "Bearer %s" $token }}
   {{ $urlPre := "https://pro.dbflex.net" }}
-  {{ $projE := getJSON $urlPre "/secure/api/v2/15331/25ABDEE3357D416283C0D66B9C872076/Web%20Project/API%20List%20All%20EN/select.json" }}
+  {{ $projE := getJSON $urlPre "/secure/api/v2/15331/Web%20Project/API%20List%20All%20EN/select.json" (dict "Authorization" $bearertoken) }}
   {{ range $projE }}
      <tr>
        <th class="has-text-right" style="white-space: nowrap;">{{ .Date }}</th>
