--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -165,8 +165,10 @@
                 　　{{- if eq .Site.Language.Lang "en" -}}
                       <table class="table is-striped is-hoverable is-fullwidth is-bordered is-size-7-mobile is-size-7-tablet is-size-6-desktop">
                         <tbody>
+                        {{ $token := getenv "PRODBTOKEN15331" }}
+                        {{ $bearertoken := printf "Bearer %s" $token }}
                         {{ $urlPre := "https://pro.dbflex.net" }}
-                        {{ $newsE := getJSON $urlPre "/secure/api/v2/15331/25ABDEE3357D416283C0D66B9C872076/Web%20Information/API%20List%20All%20EN/select.json" }}
+                        {{ $newsE := getJSON $urlPre "/secure/api/v2/15331/Web%20Information/API%20List%20All%20EN/select.json" (dict "Authorization" $bearertoken) }}
                         {{ range first 8 $newsE }}
                            <tr>
                              <th class="has-text-right" style="white-space: nowrap;">{{ .Date }}</th>
@@ -181,8 +183,10 @@
                 　　{{- else -}}
                     　 <table class="table is-striped is-hoverable is-fullwidth is-bordered is-size-7-mobile is-size-7-tablet is-size-6-desktop">
                       <tbody>
+                      {{ $token := getenv "PRODBTOKEN15331" }}
+                      {{ $bearertoken := printf "Bearer %s" $token }}
                       {{ $urlPre := "https://pro.dbflex.net" }}
-                      {{ $newsJ := getJSON $urlPre "/secure/api/v2/15331/25ABDEE3357D416283C0D66B9C872076/Web%20Information/API%20List%20All%20JP/select.json" }}
+                      {{ $newsJ := getJSON $urlPre "/secure/api/v2/15331/Web%20Information/API%20List%20All%20JP/select.json" (dict "Authorization" $bearertoken) }}
 
                       {{ range first 8 $newsJ }}
                          <tr>
@@ -237,8 +241,10 @@
           　　{{- if eq .Site.Language.Lang "en" -}}
                 <table class="table is-striped is-hoverable is-fullwidth is-bordered is-size-7-mobile is-size-7-tablet is-size-6-desktop">
                   <tbody>
+                  {{ $token := getenv "PRODBTOKEN15331" }}
+                  {{ $bearertoken := printf "Bearer %s" $token }}
                   {{ $urlPre := "https://pro.dbflex.net" }}
-                  {{ $projE := getJSON $urlPre "/secure/api/v2/15331/25ABDEE3357D416283C0D66B9C872076/Web%20Project/API%20List%20All%20EN/select.json" }}
+                  {{ $projE := getJSON $urlPre "/secure/api/v2/15331/Web%20Project/API%20List%20All%20EN/select.json" (dict "Authorization" $bearertoken) }}
                   {{ range first 8 $projE }}
                      <tr>
                        <th class="has-text-right" style="white-space: nowrap;">{{ .Date }}</th>
@@ -255,8 +261,10 @@
           　　{{- else -}}
               　<table class="table is-striped is-hoverable is-fullwidth is-bordered is-size-7-mobile is-size-7-tablet is-size-6-desktop">
                 <tbody>
+                {{ $token := getenv "PRODBTOKEN15331" }}
+                {{ $bearertoken := printf "Bearer %s" $token }}
                 {{ $urlPre := "https://pro.dbflex.net" }}
-                {{ $projJ := getJSON $urlPre "/secure/api/v2/15331/25ABDEE3357D416283C0D66B9C872076/Web%20Project/API%20List%20All%20JP/select.json" }}
+                {{ $projJ := getJSON $urlPre "/secure/api/v2/15331/Web%20Project/API%20List%20All%20JP/select.json" (dict "Authorization" $bearertoken) }}
                 {{ range first 8 $projJ }}
                    <tr>
                      <th class="has-text-right" style="white-space: nowrap;">{{ .DateJP }}</th>
