use bearer token for getjson

--- a/layouts/shortcodes/showjapanapp.html
+++ b/layouts/shortcodes/showjapanapp.html
@@ -8,17 +8,21 @@
     </tr>
   </thead>
   <tbody>
-    {{ range $.Site.Data.japanapp }}
+    {{ $token := getenv "PRODBTOKEN15331" }}
+    {{ $bearertoken := printf "Bearer %s" $token }}
+    {{ $urlPre := "https://pro.dbflex.net" }}
+    {{ $appEN := getJSON $urlPre "/secure/api/v2/15331/Web%20Japan%20Contact%20and%20App/API%20List%20All%20Apps/select.json" (dict "Authorization" $bearertoken) }}
+    {{ range $appEN }}
     <tr>
       <td>
         {{ with (index . "Description") }}{{ . | markdownify}}{{ end }}
       </td>
       <td>
         {{ with (index . "Notes") }}{{ . | markdownify }}{{ end }}
-      </td>      
+      </td>
       <td>
         {{ with (index . "URL") }}<a href="{{ . | safeHTML }}" target="_blank"><i class="fas fa-external-link-square-alt has-text-esolia-blue-1"></i></a>{{ end }}
-      </td>      
+      </td>
     </tr>
   {{ end }}
   </tbody>
@@ -35,7 +39,11 @@
     </tr>
   </thead>
   <tbody>
-    {{ range $.Site.Data.japanapp }}
+    {{ $token := getenv "PRODBTOKEN15331" }}
+    {{ $bearertoken := printf "Bearer %s" $token }}
+    {{ $urlPre := "https://pro.dbflex.net" }}
+    {{ $appJP := getJSON $urlPre "/secure/api/v2/15331/Web%20Japan%20Contact%20and%20App/API%20List%20All%20Apps/select.json" (dict "Authorization" $bearertoken) }}
+    {{ range $appJP }}
     <tr>
       <td>
         {{ with (index . "Description‡") }}{{ . | markdownify}}{{ end }}
@@ -45,7 +53,7 @@
       </td>
       <td>
         {{ with (index . "URL‡") }}<a href="{{ . | safeHTML }}" target="_blank"><i class="fas fa-external-link-square-alt has-text-esolia-blue-1"></i></a>{{ end }}
-      </td>      
+      </td>
     </tr>
   {{ end }}
   </tbody>
