Fix uptime monitor link to updown.io one

--- a/layouts/partials/footer1.html
+++ b/layouts/partials/footer1.html
@@ -12,7 +12,7 @@
             <a class="link" href="/japan-contacts">{{ i18n "genjpcontactsname" }}</a> |
             <a class="link" href="/eSolia-Contacts-vCard.vcf">vCard</a> |
             <a class="link" href="/colophon">{{ i18n "gencolophonname" }}</a> |
-            <a class="link" href="https://uptime.esolia.pro" target="_blank">{{ i18n "genstatusname" }}</a>
+            <a class="link" href="https://updown.io/p/4isvl" target="_blank">{{ i18n "genstatusname" }}</a>
             <br>
             <br>
             <p class="buttons">
