--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ .Lang }}">
   <head>
-    <!-- proven.lol/b38739 -->
+    {{ "<!-- proven.lol/b38739 -->" | safeHTML }}
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
