--- a/layouts/partials/footer1.html
+++ b/layouts/partials/footer1.html
@@ -27,7 +27,7 @@
   </div>
   {{ if not .Site.BuildDrafts }}
     <!-- Fathom - beautiful, simple website analytics -->
-    <script src="https://scallop.esolia.pro/script.js" site="{{ .Site.Params.Analytics }}" defer></script>
+    <script src="https://cdn.usefathom.com/script.js" site="{{ .Site.Params.Analytics }}" defer></script>
     <!-- / Fathom -->
   {{ end }}
 </footer>
