--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -18,7 +18,8 @@
               </h2>
               <h3 class="subtitle is-5 is-size-6-mobile has-text-white">
                   {{- if eq .Site.Language.Lang "en" -}}
-                  Currently in Japan: <span id="displayMoment"></span>
+                  Currently in Japan: <span id="displayMoment"></span><br>
+                  Japan Official and Traditional: <a href="https://esolia.pro/holidays" target="_blank">Office Holidays</a>
 
                   <script type="text/javascript">
                      (function()
@@ -34,7 +35,8 @@
                       })();
                   </script>
                   {{ else }}
-                  現在時刻: <span id="displayMoment"></span>
+                  現在時刻: <span id="displayMoment"></span><br>
+                  弊社の休業日である<a href="https://esolia.pro/holidays" target="_blank">日本の祝祭日</a>
 
                   <script type="text/javascript">
                      (function()
