--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -36,7 +36,7 @@
                   </script>
                   {{ else }}
                   現在時刻: <span id="displayMoment"></span><br>
-                  弊社の休業日である<a href="https://esolia.pro/holidays" target="_blank">日本の祝祭日</a>
+                  日本の祝祭日: <a href="https://esolia.pro/holidays" target="_blank">イソリア休業日</a>
 
                   <script type="text/javascript">
                      (function()
