Replace header logo

--- a/layouts/partials/nav1.html
+++ b/layouts/partials/nav1.html
@@ -2,7 +2,7 @@
 <nav class="navbar {{ .navbgcolor }} has-shadow is-spaced">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ .context.Site.BaseURL }}">
-      <img src="/img/eSolia-Logo-White-Opt-100.png" alt="eSolia Logo">
+      <img src="/img/logo_horiz_white_bgtransparent 2_web.png" alt="eSolia Logo">
     </a>
 
     <div class="navbar-burger burger" data-target="navMenu">
