Replace flat logo with new

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -139,7 +139,7 @@
                 <div class="tile is-parent is-shaded">
                   <article class="tile is-child box">
                     <figure class="image">
-                      <img src="/img/eSolia-Logo-Flat-2015.png" alt="eSolia Inc. Blue and Yellow Logo">
+                      <img src="/img/logo_horiz_darkblue_bgtransparent 2_web.png" alt="eSolia Inc. Blue and Yellow Logo">
                     </figure>
                   </article>
                 </div>
